@@ -1,11 +1,12 @@
 package no.unit.nva.indexingclient;
 
+import static no.unit.nva.indexingclient.TestConstants.RESOURCE_INDEX_NAME;
+
 import static org.mockito.Mockito.mock;
 
 import com.amazonaws.services.lambda.runtime.Context;
 
 import no.unit.nva.indexing.testutils.FakeIndexingClient;
-import no.unit.nva.indexingclient.constants.ApplicationConstants;
 import no.unit.nva.indexingclient.models.IndexDocument;
 
 import org.opensearch.action.DocWriteRequest.OpType;
@@ -15,14 +16,13 @@ import org.opensearch.action.bulk.BulkResponse;
 
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class BatchIndexTest {
 
     public static final Context CONTEXT = mock(Context.class);
-    public static final Random RANDOM = new Random();
-    public static final int ARBITRARY_QUERY_TIME = 123;
+    private static final Random RANDOM = new Random();
+    private static final int ARBITRARY_QUERY_TIME = 123;
 
     protected FakeIndexingClient failingOpenSearchClient() {
         return new FakeIndexingClient() {
@@ -36,7 +36,7 @@ public class BatchIndexTest {
                                         fail ->
                                                 new BulkItemResponse(
                                                         randomNumber(), OpType.UPDATE, fail))
-                                .collect(Collectors.toList());
+                                .toList();
                 BulkResponse response =
                         new BulkResponse(
                                 itemResponses.toArray(BulkItemResponse[]::new),
@@ -48,9 +48,7 @@ public class BatchIndexTest {
 
     private Failure createFailure(String identifier) {
         return new Failure(
-                ApplicationConstants.RESOURCES_INDEX,
-                identifier,
-                new Exception("failingBulkIndexMessage"));
+                RESOURCE_INDEX_NAME, identifier, new Exception("failingBulkIndexMessage"));
     }
 
     private int randomNumber() {
